springboot-app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-svc
spec:
  ports:
    - name: svc-port
      port: 8080
      targetPort: 8080
  selector:
    app: springboot-app
  type: ClusterIP
