springboot-app/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-app-svc
                port: 
                  number: 8080
